--- a/paper/sup.tex
+++ b/paper/sup.tex
@@ -40,7 +40,7 @@
 \defaultLineSpace    		%%% Line spacing
 
 %%%\balance
-% \input{method.tex}
+\input{method.tex}
 % \input{experiment.tex}
 % \input{result.tex}
 \input{tool.tex}
