--- a/paper/tool.tex
+++ b/paper/tool.tex
@@ -240,7 +240,7 @@ Then, copy \mono{smashpp} executable file into \mono{example/} directory and go 
 cp smashpp example/
 cd example/
 \end{code}
-There is a 1000 byte reference sequence, named \mono{ref}, and a 1000 byte target sequence, named \mono{tar}, in this directory. Running
+There is a 1000 byte reference sequence, named \mono{refs}, and a 1000 byte target sequence, named \mono{tars}, in this directory. Running
 \begin{code}[style=bash]
 ./smashpp -r refs -t tars -f 45 -l 3
 ./smashpp -viz -p 1 -s 50 -w 15 refs.tars.pos
