--- a/paper/cfg.tex
+++ b/paper/cfg.tex
@@ -60,7 +60,7 @@
 	commentstyle=\color{green!50!black},
 	showstringspaces=false,
 	numbers=left,
-	numberstyle=\footnotesize\sffamily\color{gray},
+	numberstyle=\footnotesize\sffamily\color{gray!50},
 	breaklines=true,
 	mathescape=false %,
 	% literate={\$}{{\$}}1
