--- a/paper/sup.tex
+++ b/paper/sup.tex
@@ -43,7 +43,7 @@
 \input{method.tex}
 % \input{experiment.tex}
 % \input{result.tex}
-\input{tool.tex}
+% \input{tool.tex}
 \input{references.tex}
 
 \end{document}
