--- a/paper/tool.tex
+++ b/paper/tool.tex
@@ -248,7 +248,7 @@ There is a 1000 byte reference sequence, named \mono{refs}, and a 1000 byte targ
 results in Fig.~\ref{fig.example}, which has been saved as ``map.svg''.
 
 \begin{figure}[!h]
-  \includegraphics[width=\linewidth]{example.pdf}
+  \includegraphics[width=.95\linewidth]{example.pdf}
   \caption{The result of running Smash++ on ...}
   \label{fig.example}
 \end{figure}
