--- a/paper/method.tex
+++ b/paper/method.tex
@@ -14,7 +14,7 @@ The schema of the proposed method is illustrated in Fig.~\ref{fig.schema}. \smas
 \begin{figure}[!h]
   \centering
   \includegraphics[width=.85\linewidth]{data_model.pdf}
-  \caption{Data model for Smash++. It is based on a cooperation between finite-context models (FCMs) and substitutional-tolerant Markov models (STMMs). For the purpose of compression, a number of probability and weight values, obtained from processing previous symbols, is employed to estimate the probability of the next input symbol. Each STMM needs to be associated to an FCM.}
+  \caption{Data model for Smash++. (a) Smash++ is based on a cooperation between finite-context models (FCMs) and substitutional-tolerant Markov models (STMMs). Note that each STMM needs to be associated to an FCM. (b) For the purpose of compression, a number of probability and weight values, obtained from processing previous symbols, is employed to estimate the probability of the next input symbol.}
   \label{fig.model}
 \end{figure}
 
