--- a/paper/tool.tex
+++ b/paper/tool.tex
@@ -145,7 +145,7 @@ Also, instead of considering the whole information content, the user is able to 
 \begin{figure}[!h]
   \centering
   \includegraphics[width=\linewidth]{filters.pdf}
-  \caption{Window functions.}
+  \caption{Various windowing functions implemented and embedded in \smashpp.}
   \label{fig.filters}
 \end{figure}
 
@@ -249,6 +249,6 @@ results in Fig.~\ref{fig.example}, which has been saved as ``map.svg''.
 
 \begin{figure}[!h]
   \includegraphics[width=.95\linewidth]{example.pdf}
-  \caption{The result of running Smash++ on ...}
+  \caption{An example of running \smashpp on two 1000 base sequences. Two similar regions in regular mode and two similar ones in inverted mode are detected.}
   \label{fig.example}
 \end{figure}
