--- a/paper/cfg.tex
+++ b/paper/cfg.tex
@@ -4,6 +4,7 @@
 
 %%%%%%  Tables
 \usepackage{booktabs}
+\usepackage{longtable}
 \usepackage{pgfplotstable}
 \DeclareMathVersion{sansserif}
 \SetSymbolFont{operators}{sansserif}{OT1}{cmss}{m}{n}
