--- a/paper/cfg.tex
+++ b/paper/cfg.tex
@@ -4,13 +4,15 @@
 
 %%%%%%  Tables
 \usepackage{booktabs}
-\usepackage{longtable}
+% \usepackage{longtable}
+\usepackage{multirow}
 \usepackage{pgfplotstable}
 \DeclareMathVersion{sansserif}
 \SetSymbolFont{operators}{sansserif}{OT1}{cmss}{m}{n}
 \usepackage{siunitx} 
 \sisetup{group-separator={,}, group-minimum-digits={3}, parse-numbers=false}
 \usepackage{tabularx}
+\usepackage{ltablex}
 \usepackage{array}
 \newcolumntype{P}{>{\raggedleft\arraybackslash}p{.2in}}
 \newcommand*{\dsSizeInTable}{\footnotesize}
