--- a/paper/tool.tex
+++ b/paper/tool.tex
@@ -55,146 +55,87 @@ cd smashpp
 \subsection{Run \smashpp}
 Various options are provided with the interface of the proposed tool, which are described in Table~\ref{tab.options}.
 
-\begin{longtable}{lp{3cm}l}
+\begin{small}
+% \begin{longtable}{@{}lp{2.9cm}p{9.5cm}@{}}
+% \begin{longtable}{@{}lp{2.9cm}X@{}}
+\begin{tabularx}{\linewidth{@{}llX@{}}
   \caption{Options.}
   \label{tab.options} \\
   \toprule
   Flag & Input & Description \\
   \midrule
-  \mono{-r} $^*$ & Seq/FASTA/FASTQ file & reference file. It is highly recommended to have short name. \\
-  \mono{-t} $^*$ & Seq/FASTA/FASTQ file  & target file. It is highly recommended to have short name. \\
-  \mono{-l} & integer in $[0, 5]$ & level of compression (default: 0). \\
-  \mono{-m} & integer in $[1, 2^{32}-1]$ & minimum segment size (default: 50). Only those regions in the reference file that are bigger than this value would be able to be considered for compression. \\
-  \mono{-e} & float in $[0.0, 100.0]$ & entropy of `N's (default: 2.0). In implementation of the reference-based compression, we have replaced `N' bases in the references and the targets with `A's and `T's, respectively. On reference-free compression, they are replaced with `A's, in both references and targets. If a user tends to replace `N' bases in a sequence with a normal distribution of `A', `C', `G' and `T's, he/she can employ GOOSE toolkit~\cite{web-goose}. \\
-  \mono{-n} & integer in $[1, 8]$ & number of threads (default: 4). Creating multiple finite-context models and substitutional-tolerant Markov models can be done in a multi-threaded fashion. \\
-  \mono{-f} & integer in $[1, 2^{32}-1]$ & filter size (default: 256). In the process of finding similar regions in the reference and the target sequences, the information content that would be obtained by compression needs to be filtered. \\
-  \mono{-ft} & integer/string in \{0$|$rectangular, 1$|$hamming, 2$|$hann, 3$|$blackman, 4$|$triangular, 5$|$welch, 6$|$sine, 7$|$nuttall\} & filter type/windowing function (default: hann). Besides Hann window that is used by default to smooth the information content (profile), we have implemented several other windowing functions: Blackman~\cite{blackman1959particular}, Hamming~\cite{tukey1949measuring}, Nuttall~\cite{nuttall1981some}, rectangular~\cite{oppenheim1999discrete}, sine~\cite{harris1978use}, triangular~\cite{bartlett1950periodogram} and Welch~\cite{welch1967use} windows. These functions are given by Equation~\ref{eq.filter} and are plotted in Fig.~\ref{fig.filters}.
-  \\
-  \mono{-fs} & char/string in \{S$|$small, M$|$medium, L$|$large\} & filter scale (default: large) \\
-  \mono{-d} & integer in $[1, 2^{64}-1]$ & sampling steps (default: 1). \\
-  \mono{-th} & float in $[0.0, 20.0]$ & threshold (default: 1.5).\\
-  \mono{-rb} & integer in $[-2^{15}, 2^{15}-1]$ & reference beginning guard (default: 0). \\
-  \mono{-re} & integer in $[-2^{15}, 2^{15}-1]$ & reference ending guard (default: 0). \\
-  \mono{-tb} & integer in $[-2^{15}, 2^{15}-1]$ & target beginning guard (default: 0). \\
-  \mono{-te}       & integer in $[-2^{15}, 2^{15}-1]$                                                                                             & target ending guard (default: 0)                                                                                                                                                                                                                          \\
-  \mono{-dp}       & --- $^\dagger$                                                                                                               & deep compression                                                                                                                                                                                                                                          \\
-  \mono{-nr}       & ---                                                                                                                          & do NOT compute self complexity                                                                                                                                                                                                                            \\
-  \mono{-sb}       & ---                                                                                                                          & save sequence (input: FASTA/FASTQ)                                                                                                                                                                                                                        \\
-  \mono{-sp}       & ---                                                                                                                          & save profile (*.prf)                                                                                                                                                                                                                                      \\
-  \mono{-sf}       & ---                                                                                                                          & save filtered file (*.fil)                                                                                                                                                                                                                                \\
-  \mono{-sf}       & ---                                                                                                                          & save segmented files (*.s$_i$)                                                                                                                                                                                                                            \\
-  \mono{-sa}       & ---                                                                                                                          & save profile, filetered and segmented files                                                                                                                                                                                                               \\
-  \mono{-rm}       & $k$,[$w$,$d$,]ir,$a$,$g$/$t$,ir,$a$,$g$:...                                                                                  & parameters of reference models (default: $14,0,0.005,0.95$):
-  $k$ (integer):  context size
-  $w$ (integer):  width of sketch in $\log_2$ form,
-  e.g., set 10 for $w=2^10=1024$
-  $d$ (integer):  depth of sketch
-  ir (integer in $\{0, 1, 2\}$): inverted repeat
-  0: regular (not inverted)
-  1: inverted, solely
-  2: both regular and inverted
-  $a$ (float $>0$):  estimator
-  $g$ (float in $[0.0, 1.0)$):  forgetting factor
-  $t$ (integer):  threshold (no. substitutions)
-  \\
-  \mono{-tm}       & $k$,[$w$,$d$,]ir,$a$,$g$/$t$,ir,$a$,$g$:...                                                                                  & parameters of target models (default: $14,0,0.005,0.95$)
-  \\
-  \mono{-ll}       & ---                                                                                                                          & save list of compression levels                                                                                                                                                                                                                           \\
-  \mono{-h}        & ---                                                                                                                          & usage guide                                                                                                                                                                                                                                               \\
-  \mono{-v}        & ---                                                                                                                          & more information (verbose)                                                                                                                                                                                                                                \\
-  \mono{--version} & ---                                                                                                                          & show version                                                                                                                                                                                                                                              \\
+%   \mono{-r} $^*$ & Seq/FASTA/FASTQ file & Reference file. It is highly recommended to have short name. \\
+%   \midrule
+%   \mono{-t} $^*$ & Seq/FASTA/FASTQ file  & Target file. It is highly recommended to have short name. \\
+%   \midrule
+%   \mono{-l} & Integer: $[0, 5]$ & Level of compression (default: 0). \\
+%   \midrule
+%   \mono{-m} & Integer: $[1, 2^{32}-1]$ & Minimum segment size (default: 50). Only those regions in the reference file that are bigger than this value would be able to be considered for compression. \\
+%   % \multicolumn{2}{@{}l@{}}{Minimum segment size (default: 50). Only those regions in the reference file that are bigger than this value would be able to be considered for compression.} \\
+%   \midrule
+%   \mono{-e} & Float: $[0.0, 100.0]$ & Entropy of `N's (default: 2.0). In implementation of the reference-based compression, we have replaced `N' bases in the references and the targets with `A's and `T's, respectively. On reference-free compression, they are replaced with `A's, in both references and targets. If a user tends to replace `N' bases in a sequence with a normal distribution of `A', `C', `G' and `T's, he/she can employ GOOSE toolkit~\cite{web-goose}. \\
+%   \midrule
+%   \mono{-n} & Integer: $[1, 8]$ & Number of threads (default: 4). Creating multiple finite-context models and substitutional-tolerant Markov models can be done in a multi-threaded fashion. \\
+%   \midrule
+%   \mono{-f} & Integer: $[1, 2^{32}-1]$ & Filter size (default: 256). In the process of finding similar regions in the reference and the target sequences, the information content that would be obtained by compression needs to be filtered. \\
+%   \midrule
+%   \mono{-ft} & Integer/String: \{0$|$rectangular, 1$|$hamming, 2$|$hann, 3$|$blackman, 4$|$triangular, 5$|$welch, 6$|$sine, 7$|$nuttall\} & Filter type/windowing function (default: hann). Besides Hann window that is used by default to smooth the information content (profile), we have implemented several other windowing functions: Blackman~\cite{blackman1959particular}, Hamming~\cite{tukey1949measuring}, Nuttall~\cite{nuttall1981some}, rectangular~\cite{oppenheim1999discrete}, sine~\cite{harris1978use}, triangular~\cite{bartlett1950periodogram} and Welch~\cite{welch1967use} windows. These functions are given by Equation~\ref{eq.filter} and are plotted in Fig.~\ref{fig.filters}.
+%   \\
+%   \midrule
+%   \mono{-fs} & Char/String: \{S$|$small, M$|$medium, L$|$large\} & Filter scale (default: large). \\
+%   \midrule
+%   \mono{-d} & Integer: $[1, 2^{64}-1]$ & Sampling steps (default: 1). Instead of considering the whole information content, this option can be used to make samples of it. \\
+%   \midrule
+%   \mono{-th} & Float: $[0.0, 20.0]$ & threshold (default: 1.5). For the purpose of segmenting the filtered information content, the average entropy of reference-based compression is used by default as the threshold, but the threshold can be altered by this option. \\
+%   \midrule
+%   \mono{-rb} & Integer: $[-2^{15}, 2^{15}-1]$ & Reference beginning guard (default: 0). \\
+%   \mono{-re} & Integer: $[-2^{15}, 2^{15}-1]$ & Reference ending guard (default: 0). \\
+%   \mono{-tb} & Integer: $[-2^{15}, 2^{15}-1]$ & Target beginning guard (default: 0). \\
+%   \mono{-te} & Integer: $[-2^{15}, 2^{15}-1]$ & Target ending guard (default: 0). \\
+%   && \smashpp is capable of finding even very small similar regions in two sequences. However, we have found experimentally that when it is running in a very sensitive mode, there might be some cases in which the size of similar regions in the reference and the target are not balanced. These cases can be handled by ``-rb'', ``-re'', ``-tb'' and ``-te'' options, that can resize the beginning and ending guards of reference and target regions, respectively. For example, if ``-tb 10'' is used, the first 10 bases in each target region will be ignored, which results in smaller regions. Note that when the guard sizes of target regions are increased, the models built from these regions would be slightly different than the original models; consequently, the sizes of reference regions that are detected as being similar to the ones from the target would be modified, as well. Therefore, changing the guard sizes of target regions will affect the sizes of reference regions. In the case of activating deep compression, by ``-dp'', changing the guard sizes of reference regions would affect the sizes of target regions, as well. \\
+%   \midrule
+%   \mono{-dp} & --- $^\dagger$ & Deep compression. The ``deep compression'' means that similar regions in target and reference sequences are found in three phases instead of two: 1) the model of the reference is built and the target is compressed based upon that model, 2) the model of each detected region is built and the whole reference is compressed based on these models and 3) the model of each detected reference region is built and the corresponding target regions will be compressed based on that model. \\
+%   \midrule
+%   \mono{-nr} & --- & Do NOT compute self complexity. It makes the tool not to perform the reference-free compression (self-complexity computation). \\
+%   \midrule
+%   \mono{-sb} & --- & Save sequence (input: FASTA/FASTQ). \smashpp accepts \fasta and \fastq files as input, in addition to sequences. In these cases, the input files are first converted to sequences and then processed further. It is possible to save these sequences by this option. \\
+%   \midrule
+%   \mono{-sp} & --- & Save profile, *.prf. When the information profile is obtained, \smashpp smoothens then removes it by default. However, it can be preserved by this option. \\
+%   \midrule
+%   \mono{-sf} & --- & Save filtered file, *.fil. The filtered profile is segmented then removed, by default; however, it can be preserved by this option. \\
+%   \midrule
+%   \mono{-ss} & --- & Save segmented files, *.s$_i$. \\
+%   \midrule
+%   \mono{-sa} & --- & Save profile, filtered and segmented files. \\
+%   \midrule
+%   \mono{-rm} & $k$,[$w$,$d$,]ir,$a$,$g$/$t$,ir,$a$,$g$:... & Parameters of reference models (default: $14,0,0.005,0.95$). \\
+%   \mono{-tm} & $k$,[$w$,$d$,]ir,$a$,$g$/$t$,ir,$a$,$g$:... & Parameters of target models (default: $14,0,0.005,0.95$): \\
+% && \begin{minipage} [t] {9cm}
+%   \begin{itemize}
+%     \item $k$ (integer $>1$): context size,
+%     \item $w$ (integer $<2^{64}-1$): sketch width in $\log_2$ form, e.g., set 10 for $w=2^{10}=1024$,
+%     \item $d$ (integer $>0$): sketch depth,
+%     \item ir (integer: \{0, 1, 2\}): inverted repeat, including 0:~regular (not inverted), 1:~inverted solely, and 2:~both regular and inverted,
+%     \item $a$ (float $>0$): estimator,
+%     \item $g$ (float: $[0.0, 1.0)$): forgetting factor,
+%     \item $t$ (integer $>0$): threshold (number of substitutions).
+%   \end{itemize}
+% \end{minipage} \\
+%   && It is recommended for compression to use ``-l'' option, since it configures the models automatically. However, using ``-rm'' and ``-tm'', the user would be able to manually configure the reference model, for reference-based compression, and the target model, for reference-free compression, respectively. Parameters of the models are described in detail in section~\ref{sec.methods}. \\
+%   \midrule
+%   \mono{-ll} & --- & Show list of parameters that would be chosen automatically for each model. \\
+%   \midrule
+%   \mono{-h} & --- & Usage guide. \\
+%   \midrule
+%   \mono{-v} & --- & More information (verbose). \\
+%   \midrule
+%   \multicolumn{2}{@{}l}{\mono{--version}} & Show version. \\
   \bottomrule
   \vspace{-2mm}
-  % $^*$ Mandatory, $^\dagger$ no input, $\times$ not used
-\end{longtable}
+  % \multicolumn{2}{@{}l}{$^*$ Mandatory, $^\dagger$ no input, $\times$ not used} & \\
+\end{tabularx}
+\end{small}
 
-\begin{align} \label{eq.filter}
-  w[n] & = 1,
-  \tag*{(rectangular)}                                                                                                                                        \\
-  w[n] & = 1-\left|\tfrac {n-N/2}{L/2}\right|, \quad L=N,
-  \tag*{(triangular/Bartlett)}                                                                                                                                \\
-  w[n] & = 1-\left(\tfrac {n-N/2}{N/2}\right)^{2},
-  \tag*{(Welch)}                                                                                                                                              \\
-  w[n] & = \sin \left(\tfrac {\pi n}{N}\right),
-  \tag*{(sine)}                                                                                                                                               \\
-  w[n] & = 0.54348-0.45652\;\cos \left(\tfrac {2\pi n}{N}\right),
-  \tag*{(Hamming)}                                                                                                                                            \\
-  w[n] & = 0.42659-0.49656\;\cos \left(\tfrac {2\pi n}{N}\right)+0.07685\;\cos \left(\tfrac {4\pi n}{N}\right),
-  \tag*{(Blackman)}                                                                                                                                           \\
-  w[n] & = 0.35577-0.48740\;\cos \left(\tfrac {2\pi n}{N}\right)+0.14423\;\cos \left(\tfrac {4\pi n}{N}\right)-0.01260\;\cos \left(\tfrac {6\pi n}{N}\right),
-  \tag*{(Nuttall)}                                                                                                                                            \\
-\end{align}
-
-A reference file and a target file are clearly mandatory to run \smashpp (without visualization). Running
-\begin{code}[style=bash]
-./smashpp
-\end{code}
-provides the following guide:
-\begin{code}[style=bash]
-SYNOPSIS
-  ./smashpp [OPTIONS]  -r <REF-FILE>  -t <TAR-FILE>
-
-OPTIONS
-  Required:
-  -r  <FILE>         = reference file (Seq/FASTA/FASTQ)
-  -t  <FILE>         = target file    (Seq/FASTA/FASTQ)
-
-  Optional:
-  -l  <INT>          = level of compression: [0, 5]. Default -> 0
-  -m  <INT>          = min segment size: [1, 4294967295]     -> 50
-  -e  <FLOAT>        = entropy of 'N's: [0.0, 100.0]         -> 2.0
-  -n  <INT>          = number of threads: [1, 8]             -> 4
-  -f  <INT>          = filter size: [1, 4294967295]          -> 256
-  -ft <INT/STRING>   = filter type (windowing function):     -> hann
-                       {0|rectangular, 1|hamming, 2|hann,
-                       3|blackman, 4|triangular, 5|welch,
-                       6|sine, 7|nuttall}
-  -fs [S][M][L]      = filter scale:                         -> L
-                       {S|small, M|medium, L|large}
-  -d  <INT>          = sampling steps                        -> 1
-  -th <FLOAT>        = threshold: [0.0, 20.0]                -> 1.5
-  -rb <INT>          = ref beginning guard: [-32768, 32767]  -> 0
-  -re <INT>          = ref ending guard: [-32768, 32767]     -> 0
-  -tb <INT>          = tar beginning guard: [-32768, 32767]  -> 0
-  -te <INT>          = tar ending guard: [-32768, 32767]     -> 0
-  -dp                = deep compression                      -> no
-  -nr                = do NOT compute self complexity        -> no
-  -sb                = save sequence (input: FASTA/FASTQ)    -> no
-  -sp                = save profile (*.prf)                  -> no
-  -sf                = save filtered file (*.fil)            -> no
-  -ss                = save segmented files (*.s[i])         -> no
-  -sa                = save profile, filetered and           -> no
-                       segmented files
-  -rm k,[w,d,]ir,a,g/t,ir,a,g:...
-  -tm k,[w,d,]ir,a,g/t,ir,a,g:...
-                     = parameters of models
-                <INT>  k:  context size
-                <INT>  w:  width of sketch in log2 form,
-                           e.g., set 10 for w=2^10=1024
-                <INT>  d:  depth of sketch
-                <INT>  ir: inverted repeat: {0, 1, 2}
-                           0: regular (not inverted)
-                           1: inverted, solely
-                           2: both regular and inverted
-              <FLOAT>  a:  estimator
-              <FLOAT>  g:  forgetting factor: [0.0, 1.0)
-                <INT>  t:  threshold (no. substitutions)
-  -ll                = list of compression levels
-  -h                 = usage guide
-  -v                 = more information
-  --version          = show version
-\end{code}
-
-The arguments ``-r'' and ``-t'' are used to specify the reference and the target, respectively, which are highly recommended to have short names. 
-Level of compression, that is an integer between 0 and 5, can be determined with ``-l''. 
-By setting ``-m'' to an integer value, only those regions in the reference file that are bigger than that value would be able to be considered for compression.
-
-In implementation of the reference-based compression, we have replaced `N' bases in the references and the targets with `A's and `T's, respectively. On reference-free compression, they are replaced with `A's, in both references and targets. If a user tends to replace `N' bases in a sequence with a normal distribution of `A', `C', `G' and `T's, he/she can employ GOOSE toolkit~\cite{web-goose}. Note that we have set by default the entropy of `N's to 2.0, however, it can be changed to a value of interest using ``-e'' option.
-
-Creating multiple finite-context models and substitutional-tolerant Markov models can be done in a multi-threaded fashion by setting ``-n'' to an integer. 
-
-In the process of finding similar regions in the reference and the target sequences, the information content that would be obtained by compression needs to be filtered. Size of the window and type of the windowing function can be set by ``-f'' and ``-ft'' options, respectively.
-Besides Hann window that is used by default to smooth the information content (profile), we have implemented several other windowing functions, including Blackman~\cite{blackman1959particular}, Hamming~\cite{tukey1949measuring}, Nuttall~\cite{nuttall1981some}, rectangular~\cite{oppenheim1999discrete}, sine~\cite{harris1978use}, triangular~\cite{bartlett1950periodogram} and Welch~\cite{welch1967use} windows. These functions are given by
 \begin{align}
   w[n] & = 1,
   \tag*{(rectangular)}                                                                                                                                        \\
@@ -210,36 +151,14 @@ Besides Hann window that is used by default to smooth the information content (p
   \tag*{(Blackman)}                                                                                                                                           \\
   w[n] & = 0.35577-0.48740\;\cos \left(\tfrac {2\pi n}{N}\right)+0.14423\;\cos \left(\tfrac {4\pi n}{N}\right)-0.01260\;\cos \left(\tfrac {6\pi n}{N}\right),
   \tag*{(Nuttall)}                                                                                                                                            \\
+  \label{eq.filter}
 \end{align}
-and are plotted in Fig.~\ref{fig.filters}.
-Scale of the filter can be set as S (small), M (medium) or L (large), using ``-fs''.
-Also, instead of considering the whole information content, the user is able to make samples of it by steps of which size can be determined by ``-d''.
 \begin{figure}[!h]
   \centering
   \includegraphics[width=\linewidth]{filters.pdf}
   \caption{Various windowing functions implemented and embedded in \smashpp.}
   \label{fig.filters}
 \end{figure}
-
-For the purpose of segmenting the filtered information content, the average entropy of reference-based compression is used by default as the threshold, but the threshold can be altered by ``-th'' option.
-
-\smashpp is capable of finding even very small similar regions in two sequences. However, we have found experimentally that when it is running in a very sensitive mode, there might be some cases in which the size of similar regions in the reference and the target are not balanced. These cases can be handled by ``-rb'', ``-re'', ``-tb'' and ``-te'' options, that can resize the beginning and ending guards of reference and target regions, respectively.
-For example, if ``-tb 10'' is used, the first 10 bases in each target region will be ignored, which results in smaller regions.
-Note that when the guard sizes of target regions are increased, the models built from these regions would be slightly different than the original models; consequently, the sizes of reference regions that are detected as being similar to the ones from the target would be modified, as well. Therefore, changing the guard sizes of target regions will affect the sizes of reference regions. 
-In the case of activating deep compression, by ``-dp'', changing the guard sizes of reference regions would affect the sizes of target regions, as well.
-
-The ``deep compression'' means that similar regions in target and reference sequences are found in three phases instead of two: 1) the model of the reference is built and the target is compressed based upon that model, 2) the model of each detected region is built and the whole reference is compressed based on these models and 3) the model of each detected reference region is built and the corresponding target regions will be compressed based on that model.
-
-Triggering ``-nr'' makes the tool not to perform the reference-free compression (self-complexity computation).
-
-\smashpp accepts \fasta and \fastq files as input, in addition to sequences. In these cases, the input files are first converted to sequences and then processed further. It is possible to save these sequences by ``-sb'' option.
-When the information profile is obtained, \smashpp smoothens then removes it by default. However, it can be preserved by ``-sp'' option.
-The same thing happens to the smoothed file, i.e., it is segmented then removed. But, the user can use ``-sf'' to save the filtered file. 
-Also, the segmented files can be saved using ``-ss''. 
-The user can save all the information profile (content), filtered and segmented files, by triggering ``-sa'' option.
-
-For the purpose of compression, it is recommended to use ``-l'' option, since it configures the models automatically. However, using ``-rm'' and ``-tm'', the user would be able to manually configure the reference model, for reference-based compression, and the target model, for reference-free compression, respectively. Parameters of the models are described in detail in section~\ref{sec.methods}.
-Note that using ``-ll'' option, the list of parameters that would be chosen for each model automatically, will be shown.
 
 By running \smashpp, positions of the similar regions in reference and target sequences, and also complexity of the regions is saved in a ``.pos'' file. This tab-separated file has a header including:
 \begin{enumerate}
