--- a/paper/sup.tex
+++ b/paper/sup.tex
@@ -42,8 +42,8 @@
 %%%\balance
 % \input{method.tex}
 % \input{experiment.tex}
-% \input{result.tex}
-\input{tool.tex}
+\input{result.tex}
+% \input{tool.tex}
 \input{references.tex}
 
 \end{document}
