--- a/paper/result.tex
+++ b/paper/result.tex
@@ -2,3 +2,10 @@
 \section{Results}
 \label{sec.results}
 \smashpp and several other methods have been carried out on a collection of synthetic and real sequences. The machine used for the tests had an 8-core 3.40~GHz Intel\textsuperscript{\textregistered} Core\texttrademark\xspace i7-6700 CPU with 32~GB RAM.
+
+\begin{figure}[!h]
+  \centering
+  \includegraphics[width=\linewidth]{synth.pdf}
+  \caption{synthetic.}
+  \label{fig.synth}
+\end{figure}
