--- a/paper/sup.tex
+++ b/paper/sup.tex
@@ -35,16 +35,15 @@
 
 \begin{document}
 
-% \input{title.tex}	%%% Title page
+\input{title.tex}	%%% Title page
 
 \defaultLineSpace    		%%% Line spacing
 
 %%%\balance
-% \input{method.tex}
-% \input{experiment.tex}
-% \input{result.tex}
-% \input{tool.tex}
-\input{declaration.tex}
+\input{method.tex}
+\input{experiment.tex}
+\input{result.tex}
+\input{tool.tex}
 \input{references.tex}
 
 \end{document}
